--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -41,8 +41,8 @@ ul {
   margin: auto;
 }
 
-.list-group-item {
-  background-color: #f8f9fa;
+.custom-white {
+  background-color: #fbf9f9;
 }
 
 .card-corners {
