--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -2,13 +2,13 @@
   <h1 class="mb-4 text-white">Find, search, discover and explore.</h1>
   <%= form_with(url: '/search', method: 'get', class: 'mb-4') do %>
     <div class="input-group">
-      <%= text_field_tag :query, nil, class: 'form-control p-2 card-corners', placeholder: 'Search' %>
+      <%= text_field_tag :query, nil, class: 'form-control p-2 card-corners custom-white', placeholder: 'Search' %>
       <%= button_to search_path, method: :get, class: 'btn search-button ' do %>
         <i class="fa-solid fa-magnifying-glass" style="color: #ffffff;"></i>
       <% end %>
     </div>
   <% end %>
-  <div class="card card-corners p-3" style="min-height: 700px;">
+  <div class="card card-corners p-3 custom-white" style="min-height: 700px;">
     <div class="d-flex flex-column mb-4">
       <h6 class="cst-title">Search Results:<%= @input_name %></h2>
       <p class="cst-text text-secondary"><%= @results.length %> results found</p>
@@ -27,17 +27,3 @@
     <% end %>
   </div>
 </div>
-<%# <div class="d-flex flex-row card mt-5 justify-content-around">
-  <div class="d-flex flex-column">
-    <ul>
-      <li>1</li>
-      <li>2</li>
-    </ul>
-  </div>
-  <div class="d-flex flex-column">
-    <ul>
-      <li>3</li>
-      <li>4</li>
-    </ul>
-  </div>
-</div> %>
