--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -61,3 +61,30 @@ ul {
 .cst-text {
   font-size: 16px;
 }
+
+#suggestionsList {
+  position: absolute;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  border: 0.5px solid gray;
+  background-color: #e6e4e4;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  z-index: 1;
+  width: 200px;
+  max-height: 200px;
+  /* Додайте максимальну висоту для появи прокрутки */
+  overflow: auto;
+  /* Додаємо автоматичну прокрутку при необхідності */
+}
+
+
+#suggestionsList li {
+  padding: 5px;
+  margin-bottom: 3px;
+}
+
+#suggestionsList li:hover {
+  background-color: #e0d8d8;
+}
