--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,12 +1,14 @@
+<%= javascript_include_tag('main.js') %>
 <div class="container mt-5">
   <h1 class="mb-4 text-white">Find, search, discover and explore.</h1>
   <%= form_with(url: '/search', method: 'get', class: 'mb-4') do %>
     <div class="input-group">
-      <%= text_field_tag :query, nil, class: 'form-control p-2 card-corners custom-white', placeholder: 'Search' %>
-      <%= button_to search_path, method: :get, class: 'btn search-button ' do %>
+      <%= text_field_tag :query, nil, class: 'form-control p-2 card-corners custom-white', placeholder: 'Search', id: 'searchInput', oninput: 'getSuggestions()', autocomplete: 'off' %>
+      <%= button_to search_path, method: :get, class: 'btn search-button', id: 'searchButton' do %>
         <i class="fa-solid fa-magnifying-glass" style="color: #ffffff;"></i>
       <% end %>
     </div>
+    <ul id="suggestionsList" class="dropdown-list"></ul>
   <% end %>
   <div class="card card-corners p-3 custom-white" style="min-height: 700px;">
     <div class="d-flex flex-column mb-4">
